--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1" />
         <title>JotCode</title>
-        <link rel="icon" type="image/svg" href="+.svg" />
+        <link rel="icon" type="image/svg" href="Images/+.svg" />
 
         <link
             href="https://fonts.googleapis.com/css2?family=Ribeye+Marrow&display=swap"
